# codex

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.claude/: settings.json
.github/workflows/: audit.yml  ci.yml  commitlint.yml  docs.yml  release.yml  scorecard.yml
codex-seedx/: CONVENTIONS.md  DESIGN.md  README.md
codex-seedx/reference/codex/: definition.rs  mod.rs
codex-seedx/reference/codex/dtos/: column.rs  document.rs  enum_type.rs  mod.rs  partial.rs  select.rs  semantic.rs  table.rs  view.rs
codex-seedx/reference/codex/dtos/compile/: mod.rs
codex-seedx/reference/contracts/: codex.rs
codex-seedx/reference/drivers/: yaml.rs
codex-seedx/reference/errors/: codex.rs
codex-seedx/reference/mason/: definition.rs  mod.rs  reader.rs  sql.rs  writer.rs
codex-seedx/reference/mason/read_utils/: build.rs  filter.rs  mod.rs  search.rs  select.rs  sort.rs
codex-seedx/reference/mason/write_utils/: archive.rs  mod.rs  project.rs  sink.rs  validate.rs
codex-seedx/reference/python-tool/: schema_tool.py
codex-seedx/reference/rsql/: rsql.rs
codex-seedx/reference/schema/: aggregate-schema.json  linker.rs  postlude.sql
codex-seedx/reference/schema/definitions/: execution.yml  node_execution.yml  shared.yml
codex-seedx/reference/schema/templates/: schema.sql.jinja
codex-seedx/reference/shared-codex-dtos/: aggregate.rs  column.rs  mod.rs  read_shape.rs  relation.rs
src/: error.rs  lib.rs  main.rs
src/ast/: document.rs  parse.rs  select.rs  view.rs
src/catalog/: build.rs  column.rs  data_type.rs  mod.rs
(+5 files in other folders)
